# travelProject_ai_part

./: .gitignore  AI_Report.md  README.md
AI/app/: Dockerfile  main.py  make_dataset_address.ipynb  make_dataset_service.ipynb  make_dataset_service2.ipynb  pyproject.toml  service_dataset.json  view.ipynb  국토교통부_전국 법정동_20250415.csvZone.Identifier
AI/app/CRUD/: select.py
AI/app/DB/: db_connect.py  mysql_db_connect.py  postgrsql_db_connect.py
AI/app/DB/SqlModel/: sqlmodel_bd.py
AI/app/DB/SqlModel/Booking/: Booking.py
AI/app/DB/SqlModel/Mysql/Room/: Accomodation.py
AI/app/DB/SqlModel/Mysql/UserAccont/: User.py
AI/app/DB/SqlModel/Postgresql/: CityRegion.py  ServiceCategory.py
AI/app/DB/SqlModel/Room/: AccommodationImage.py  PricePolicy.py  Room.py  RoomType.py
AI/app/DB/SqlModel/UserAccont/: SocialAccount.py
AI/app/Domain/: tourAPI.py
AI/app/LangChain/: QA_Chain.py  test.ipynb  test2.ipynb
AI/app/LangChain/prompt/: QandAPrompt.yaml
app/: main.py
app/CRUD/: select.py
app/DB/: db_connect.py
app/LangChain/: QA_Chain.py
app/LangChain/prompt/: QandAPrompt.yaml
