[tool.poetry]
name = "teamproj"
version = "0.1.0"
description = ""
authors = ["N"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.42"
python-dotenv = "^1.1.1"
sqlmodel = "^0.0.24"
pydantic = "^2.11.7"
pyyaml = "^6.0.2"
langchain = "^0.3.27"
langchain-core = "^0.3.72"
langchain-openai = "^0.3.28"
notebook = "^7.4.5"
ipykernel = "^6.30.1"
pandas = "^2.3.1"
pgvector = "^0.4.1"
numpy = "^2.3.2"
faiss-cpu = "^1.11.0.post1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
